--- a/QuanLySanPham/MainPage.xaml
+++ b/QuanLySanPham/MainPage.xaml
@@ -1,35 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QuanLySanPham.MainPage">
+             x:Class="QuanLySanPham.MainPage"
+             xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
+             x:DataType="viewmodel:MainPageViewModel"
+             Title="Trang chủ">
 
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World!"
+                Text="Quản lý sản phẩm"
                 Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+                SemanticProperties.HeadingLevel="Level1"
+                HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                Text="Hãy điền tên của bạn"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <Entry
+                Placeholder="Tên của bạn"
+                HorizontalOptions="Fill" 
+                Text="{Binding UserName}"/>
+
+            <Label
+                Text="Nếu đã có file excel theo định dạng, hãy nhấn Nhập file để tiếp tục, nếu chưa có, hãy nhấn Tạo file"/>
+
+            <HorizontalStackLayout
+                Spacing="10">
+                <Button
+                    Text="Nhập file"
+                    HorizontalOptions="Fill" 
+                    Command="{Binding EnterCommand}"/>
+                <Button
+                    Text="Tạo file"
+                    HorizontalOptions="Fill" 
+                    Command="{Binding CreateCommand}"/>
+            </HorizontalStackLayout>
         </VerticalStackLayout>
     </ScrollView>
 
