--- a/QuanLySanPham/View/DanhSachSP.xaml
+++ b/QuanLySanPham/View/DanhSachSP.xaml
@@ -2,18 +2,26 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuanLySanPham.View.DanhSachSP"
-             Title="Danh sách sản phẩm"
+             Title="{Binding Title}"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
              x:DataType="viewmodel:DanhSachSPViewModel"
              xmlns:model="clr-namespace:QuanLySanPham.Model">
-    
-    <Grid HeightRequest="550"
-          WidthRequest="1000"
-          RowSpacing="10"
-          RowDefinitions="Auto, 350, Auto, *, Auto">
 
-        <Grid ColumnDefinitions="140, 300, 100, 60, *"
-              ColumnSpacing="40">
+    <VerticalStackLayout Spacing="20">
+
+        <Label
+            Text="Danh sách sản phẩm"
+            Style="{StaticResource Headline}"
+            SemanticProperties.HeadingLevel="Level1"
+            HorizontalOptions="Center" />
+
+        <Grid 
+            Padding="20"
+          RowSpacing="10"
+          RowDefinitions="Auto, *, Auto, Auto">
+
+        <Grid ColumnDefinitions="*, *, *, *, *"
+              ColumnSpacing="10">
             <Label Grid.Column="0" Text="Mã sản phẩm" FontAttributes="Bold"/>
             <Label Grid.Column="1" Text="Tên sản phẩm" FontAttributes="Bold"/>
             <Label Grid.Column="2" Text="Đơn giá" FontAttributes="Bold" HorizontalOptions="Center"/>
@@ -28,8 +36,8 @@
                         ItemsSource="{Binding DsSanPham}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Grid ColumnDefinitions="140, 300, 100, 60, *"
-                          ColumnSpacing="40"
+                        <Grid ColumnDefinitions="*, *, *, *, *"
+                          ColumnSpacing="10"
                           x:DataType="model:SanPham">
                         <Label Grid.Column="0" Text="{Binding MaSanPham}"/>
                         <Label Grid.Column="1" Text="{Binding Ten}" />
@@ -48,10 +56,10 @@
         </Grid>
         
         <Grid Grid.Row="3"
-              HeightRequest="50"
-              WidthRequest="1000"
               ColumnDefinitions="*, Auto, Auto, Auto, *"
-              ColumnSpacing="30">
+              RowDefinitions="Auto, Auto"
+              ColumnSpacing="10"
+              RowSpacing="10">
 
             <Button Text="Thêm"
                     Command="{Binding AddCommand}"
@@ -68,13 +76,18 @@
                     Grid.Column="3"
                     BackgroundColor="Blue"
                     HorizontalOptions="Center"/>
-        </Grid>
+            <Button Grid.Row="4"
+                    Grid.Column="2"
+                    BackgroundColor="LightGray"
+                    TextColor="Black"
+                    Text="Xuất PDF"
+                    WidthRequest="100"
+                    Command="{Binding ExportCommand}"/>
+            
+            </Grid>
 
-        <Button Grid.Row="4"
-                BackgroundColor="LightGray"
-                TextColor="Black"
-                Text="Xuất PDF"
-                WidthRequest="100"
-                Command="{Binding ExportCommand}"/>
-    </Grid>
+            
+        </Grid>
+        
+    </VerticalStackLayout>
 </ContentPage>
