--- a/QuanLySanPham/View/EditSanPham.xaml
+++ b/QuanLySanPham/View/EditSanPham.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuanLySanPham.View.EditSanPham"
-             Title="EditSanPham"
+             Title="Sửa thông tin sản phẩm"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
              x:DataType="viewmodel:EditSanPhamViewModel">
 
