--- a/QuanLySanPham/View/AddSanPham.xaml
+++ b/QuanLySanPham/View/AddSanPham.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuanLySanPham.View.AddSanPham"
-             Title="AddSanPham"
+             Title="Thêm sản phẩm mới"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
              x:DataType="viewmodel:AddSanPhamViewModel">
     
