--- a/QuanLySanPham/AppShell.xaml
+++ b/QuanLySanPham/AppShell.xaml
@@ -4,12 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:QuanLySanPham"
+    xmlns:view="clr-namespace:QuanLySanPham.View"
     Shell.FlyoutBehavior="Disabled"
     Title="QuanLySanPham">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+        ContentTemplate="{DataTemplate view:Login}"
+        Route="Login" />
 </Shell>
