--- a/QuanLySanPham/MainPage.xaml
+++ b/QuanLySanPham/MainPage.xaml
@@ -4,49 +4,73 @@
              x:Class="QuanLySanPham.MainPage"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
              x:DataType="viewmodel:MainPageViewModel"
-             Title="Trang chủ">
+             NavigationPage.HasNavigationBar="False">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <LinearGradientBrush x:Key="gradient" EndPoint="0, 1">
+                <GradientStop Offset="0" Color="#6C06E6"/>
+                <GradientStop Offset="1" Color="#FF228B"/>
+            </LinearGradientBrush>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-            <Label
-                Text="Quản lý sản phẩm"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1"
-                HorizontalOptions="Center" />
+    <Grid RowDefinitions=".3*, .7*">
+        <Image Aspect="AspectFill" Source="background.jpg"/>
+        <Grid BackgroundColor="#4F3F9B" Opacity="0.8"/>
+        <Grid ColumnDefinitions="*,*">
+            <Border HeightRequest="150"
+                    WidthRequest="150"
+                    Stroke="{StaticResource gradient}"
+                    StrokeThickness="3"
+                    BackgroundColor="White">
+                <Border.StrokeShape>
+                    <Ellipse></Ellipse>
+                </Border.StrokeShape>
+                <Image Source="icon.png"
+                   Aspect="AspectFit"
+                   HeightRequest="150"/>
+            </Border>
+        </Grid>
+        <Grid Grid.Row="1">
+            <RoundRectangle 
+                Margin="-5, -30, -5, -2"
+                CornerRadius="30, 30, 0, 0"
+                Fill="White"/>
 
-            <Label
-                Text="Hãy điền tên của bạn"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                HorizontalOptions="Center" />
+            <VerticalStackLayout Margin="30, 0, 30, 0">
+                <Label FontAttributes="Bold"
+                       FontFamily="bold"
+                       FontSize="Large"
+                       Text="Quản lý đơn hàng"
+                       TextColor="Black"/>
+                <Label FontFamily="medium"
+                       Text="Đăng nhập để tiếp tục"
+                       TextColor="Gray"/>
+                <Grid Margin="0, 30, 0, 0" ColumnDefinitions=".2*, .8*">
+                    <RoundRectangle
+                        BackgroundColor="#EDEBF6"
+                        CornerRadius="10"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"
+                        HeightRequest="60"
+                        WidthRequest="60"/>
+                    <Image HeightRequest="60"
+                           WidthRequest="60"
+                           Source="login_icon.png"/>
+                    <Entry Grid.Column="1"
+                           Placeholder="Hãy nhập tên của bạn"
+                           Text="{Binding }"/>
+                </Grid>
 
-            <Entry
-                Placeholder="Tên của bạn"
-                HorizontalOptions="Fill" 
-                Text="{Binding UserName}"/>
+                <Button Text="Tiếp tục"
+                        Margin="0,50,0,0"
+                        BackgroundColor="#4F3F9B"
+                        HeightRequest="60"
+                        Command="{Binding }"/>
 
-            <Label
-                Text="Nếu đã có file excel theo định dạng, hãy nhấn Nhập file để tiếp tục, nếu chưa có, hãy nhấn Tạo file"/>
-
-            <HorizontalStackLayout
-                Spacing="10">
-                <Button
-                    Text="Nhập file"
-                    HorizontalOptions="Fill" 
-                    Command="{Binding EnterCommand}"
-                    BackgroundColor="CornflowerBlue"
-                    TextColor="White"/>
-                <Button
-                    Text="Tạo file"
-                    HorizontalOptions="Fill" 
-                    Command="{Binding CreateCommand}"
-                    BackgroundColor="CadetBlue"
-                    TextColor="White"/>
-            </HorizontalStackLayout>
-        </VerticalStackLayout>
-    </ScrollView>
+            </VerticalStackLayout>
+        </Grid>
+    </Grid>
 
 </ContentPage>
