--- a/QuanLySanPham/View/EditSanPham.xaml
+++ b/QuanLySanPham/View/EditSanPham.xaml
@@ -23,7 +23,11 @@
 
                 <Grid Margin="0, 30, 0, 0" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
                     <Label Grid.Row="0" Text="Mã sản phẩm" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
-                    <Entry Grid.Row="1" Text="{Binding Sanpham.MaSanPham}" IsReadOnly="True" Placeholder="Nhập mã sản phẩm"/>
+                    <Entry Grid.Row="1" Text="{Binding Sanpham.MaSanPham}" IsReadOnly="True" Placeholder="Nhập mã sản phẩm">
+                        <Entry.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding EntryTappedCommand}" />
+                        </Entry.GestureRecognizers>
+                    </Entry>
                     <Label Grid.Row="2" Text="Nhập tên sản phẩm" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
                     <Entry Grid.Row="3" Text="{Binding Sanpham.Ten}" Placeholder="Nhập tên sản phẩm"/>
                     <Label Grid.Row="4" Text="Nhập đơn giá" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
